# CoreAssert

./: .gitignore  CMakeLists.txt  CoreAssert.h  README.md
CoreAssert/: CoreAssert.h
CoreAssert/include/: Assert.h  Config.h  CoreAssert_Utils.h  Exception.h  NotImplemented.h  OnlyInDebug.h  Verify.h
CoreAssert/include/private/: PrivateHelpers.h
CoreAssert/src/private/: PrivateHelpers.c  PrivateHelpers.cpp
docs/: Doxyfile  mainpage.dox  site_info
include/: Config.h  Exception.h  Verify.h
include/private/: PrivateHelpers.h
scripts/: update_version.sh
src/private/: PrivateHelpers.cpp
